--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,17 @@
 # 应用配置
 spring.application.name=qytbackend
 server.port=8080
-server.servlet.context-path=/
-
-# SpringDoc配置
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.packages-to-scan=com.qyt.qytbackend.controller
+server.servlet.context-path=/qytbackend
 
 # 数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/qyttest?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 spring.datasource.username=qyt
 spring.datasource.password=!Qyt123456
+# 防止数据库连接泄漏配置
+spring.datasource.hikari.max-lifetime=60000
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=30000
 
 # MyBatis配置
 mybatis.mapper-locations=classpath:mapper/*.xml
