--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# 编译输出
+build/
+out/
+bin/
+*.class
+*.jar
+*.war
+*.ear
+
 ### STS ###
 .apt_generated
 .classpath
@@ -31,3 +40,31 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# 系统文件
+.DS_Store
+Thumbs.db
+
+# 日志文件
+*.log
+logs/
+
+# 依赖目录
+node_modules/
+vendor/
+.venv/
+env/
+
+# 环境变量
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# 缓存
+.cache/
+
+# 操作系统
+tmp/
+temp/
