1.所有实体添加字段注释，根据表结构备注； 2.增加新增类目接口； 3.所有service实现类增加@Slf4j注解，修改日志输出

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.servlet.context-path=/qytbackend
 # 数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/qyttest?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
-spring.datasource.username=qyt
-spring.datasource.password=!Qyt123456
+spring.datasource.username=root
+spring.datasource.password=TJ819z53
 # 防止数据库连接泄漏配置
 spring.datasource.hikari.max-lifetime=60000
 spring.datasource.hikari.idle-timeout=30000
