--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,24 @@ logging.level.root=INFO
 logging.level.com.qyt.qytbackend=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{50} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{50} - %msg%n
+
+# Redis配置
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.username=
+spring.redis.password=
+spring.redis.database=0
+# 连接池配置
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-wait=-1
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=0
+
+# OSS配置
+oss.access-key=
+oss.secret-key=
+oss.host-name=
+oss.time-out=30000
+oss.region=
+oss.end-point=
+oss.bucket=
