--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{50} -
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{50} - %msg%n
 
 # Redis配置
-spring.redis.host=localhost
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.username=
 spring.redis.password=
